# zq-master-bridge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  zq-agent-router.spec
.bolt/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  create-enhancement-branch.yml  release.yml
agents/: __init__.py  requirements.txt
agents/core/: __init__.py  router.py
database/: schema.sql
docs/v3/: ARCHITECTURE.md  SCAFFOLDING.md
scripts/: build-and-install.ps1  build-android.ps1  build-sidecar.ps1  generate_icons.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
