[package]
name = "zq-master-bridge"
version = "2.0.0"
description = "ZQ Master Bridge — Control Room V2"
authors = ["Zubin Qayam <zubin.qayam@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/zubinqayam/zq-master-bridge"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "zq-master-bridge"
path = "src/main.rs"

[build-dependencies]
# tauri-build handles all Windows resource embedding (VERSIONINFO, icon,
# manifest) automatically. Do NOT add winres here - it causes a duplicate
# VERSIONINFO resource and a fatal LNK1123 linker error.
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
